--- a/profiles/style/vivian.css
+++ b/profiles/style/vivian.css
@@ -17,6 +17,8 @@ html {
 
 body{
   width:100%;
+  background-image: url("http://orig13.deviantart.net/2eee/f/2013/097/0/0/kawaii_desu_bear_tile_by_genicecream-d60tw3o.jpg");
+  background-repeat: repeat-y;
 }
 
 /*make the header in the middle*/
