Background image attempt 2

--- a/profiles/style/vivian.css
+++ b/profiles/style/vivian.css
@@ -17,8 +17,6 @@ html {
 
 body{
   width:100%;
-  background-image: url("http://orig13.deviantart.net/2eee/f/2013/097/0/0/kawaii_desu_bear_tile_by_genicecream-d60tw3o.jpg");
-  background-repeat: repeat-y;
 }
 
 /*make the header in the middle*/
@@ -86,4 +84,8 @@ p{
 
 .content {
   padding: 10px;
+}
+.side{
+  background-image: url("http://orig13.deviantart.net/2eee/f/2013/097/0/0/kawaii_desu_bear_tile_by_genicecream-d60tw3o.jpg");
+  background-repeat: repeat-y;   
 }
